--- a/index.html
+++ b/index.html
@@ -1,107 +1,343 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abstract</title>
+    <title>Abstrackt</title>
+    <link rel="stylesheet" href="./src/style.css" />
   </head>
-  <body>
-    <header>
-      <span>
+  <body class="flex min-h-screen flex-col justify-between bg-color-bg1">
+    <header
+      class="flex justify-between bg-color-bg2 p-7 text-color-bg1 text-xl">
+      <span class="flex items-center gap-2">
         <h1>
-          <a href="">
-            <span class="abstract-logo"></span>
+          <a href="#" class="flex items-center gap-2 font-bold">
+            <div
+              class="relative inset-0 size-7 rounded-lg border bg-color-bg1 p-4">
+              <div
+                class="absolute right-[5px] top-[5px] size-4 rounded-full border-[4px] border-black"></div>
+              <div
+                class="absolute bottom-1 left-1 size-6 border-b-4 border-l-4 border-black"></div>
+            </div>
+            Abstrackt
           </a>
         </h1>
-        <h1><a href="">Help Center</a></h1>
+        <h1 class="border-l-2 border-white pl-2">
+          <a class="font-semibold" href="">Help Center</a>
+        </h1>
       </span>
       <span>
         <button>Submit a request</button>
         <button>Sign in</button>
       </span>
     </header>
-    <main>
-      <section class="search-section">
-        <h1>How can we help?</h1>
-        <label for="search-input" class="sr-only"
-          >Input a search term we can help with</label
-        >
-        <input type="search" name="search-input" id="search-input" />
+    <main class="flex flex-col">
+      <section
+        class="flex flex-col items-center justify-center gap-16 bg-color-bg3 p-16 py-32">
+        <h1 class="text-center text-6xl font-semibold md:text-8xl">
+          How can we help?
+        </h1>
+        <label for="search-input" class="sr-only">
+          Input a search term we can help with
+        </label>
+        <input
+          class="min-w-xl relative w-[70%] border border-color-bg2/60 bg-color-bg1 p-6 shadow-lg
+            placeholder:text-xl focus:border-color-primary1 outline-transparent"
+          placeholder="Search"
+          type="search"
+          name="search-input"
+          autocomplete="off"
+          id="search-input" />
       </section>
-      <section>
-        <div>
-          <img src="./assets/images/image1.jpeg" alt="Image of xml" />
+      <section class="flex justify-center p-2 text-red-900/60 italic">
+        <h3>
+          This is a
+          <a
+            class="underline hover:brightness-50"
+            href="https://frontendpractice.com"
+            target="_blank"
+            >frontendpractice.com</a
+          >-challenge inspired by
+          <a
+            class="underline hover:brightness-50"
+            href="https://help.abstract.com/hc/en-us"
+            target="_blank"
+            class=""
+            >Abstract's help page</a
+          >.
+        </h3>
+      </section>
+      <section
+        class="flex flex-col justify-center gap-24 p-12 py-24 md:flex-row md:flex-wrap">
+        <div class="flex w-96 gap-2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-16 w-16 flex-shrink-0">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M20.25 6.375c0 2.278-3.694 4.125-8.25 4.125S3.75 8.653 3.75 6.375m16.5 0c0-2.278-3.694-4.125-8.25-4.125S3.75 4.097 3.75 6.375m16.5 0v11.25c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125V6.375m16.5 0v3.75m-16.5-3.75v3.75m16.5 0v3.75C20.25 16.153 16.556 18 12 18s-8.25-1.847-8.25-4.125v-3.75m16.5 0c0 2.278-3.694 4.125-8.25 4.125s-8.25-1.847-8.25-4.125" />
+          </svg>
+
           <div>
-            <h1>Using Abstract</h1>
+            <h1>Using Abstrackt</h1>
             <p>
-              Abstract lets you manage, version, and document your designs in
+              Abstrackt lets you manage, version, and document your designs in
               one place.
             </p>
             <p>
-              <a href="#">Learn More -></a>
+              <a
+                class="font-semibold text-color-primary1 after:pl-1 after:content-['\2192']"
+                href="#"
+                >Learn More</a
+              >
             </p>
           </div>
         </div>
-        <div>
-          <img src="./assets/images/image2.jpeg" alt="Image 2" />
-          <div>
+        <div class="flex w-96 gap-2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-16 w-16 flex-shrink-0">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
+          </svg>
+
+          <div class="">
             <h1>Manage your account</h1>
             <p>
               Configure your account settings, such as your email, profile
               details, and password.
             </p>
             <p>
-              <a href="#">Learn More -></a>
+              <a
+                class="font-semibold text-color-primary1 after:pl-1 after:content-['\2192']"
+                href="#"
+                >Learn More</a
+              >
             </p>
           </div>
         </div>
-        <div>
-          <img src="./assets/images/image3.jpeg" alt="Image 3" />
-          <div>
+        <div class="flex w-96 gap-2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-16 w-16 flex-shrink-0">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M14.25 6.087c0-.355.186-.676.401-.959.221-.29.349-.634.349-1.003 0-1.036-1.007-1.875-2.25-1.875s-2.25.84-2.25 1.875c0 .369.128.713.349 1.003.215.283.401.604.401.959v0a.64.64 0 0 1-.657.643 48.39 48.39 0 0 1-4.163-.3c.186 1.613.293 3.25.315 4.907a.656.656 0 0 1-.658.663v0c-.355 0-.676-.186-.959-.401a1.647 1.647 0 0 0-1.003-.349c-1.036 0-1.875 1.007-1.875 2.25s.84 2.25 1.875 2.25c.369 0 .713-.128 1.003-.349.283-.215.604-.401.959-.401v0c.31 0 .555.26.532.57a48.039 48.039 0 0 1-.642 5.056c1.518.19 3.058.309 4.616.354a.64.64 0 0 0 .657-.643v0c0-.355-.186-.676-.401-.959a1.647 1.647 0 0 1-.349-1.003c0-1.035 1.008-1.875 2.25-1.875 1.243 0 2.25.84 2.25 1.875 0 .369-.128.713-.349 1.003-.215.283-.4.604-.4.959v0c0 .333.277.599.61.58a48.1 48.1 0 0 0 5.427-.63 48.05 48.05 0 0 0 .582-4.717.532.532 0 0 0-.533-.57v0c-.355 0-.676.186-.959.401-.29.221-.634.349-1.003.349-1.035 0-1.875-1.007-1.875-2.25s.84-2.25 1.875-2.25c.37 0 .713.128 1.003.349.283.215.604.401.96.401v0a.656.656 0 0 0 .658-.663 48.422 48.422 0 0 0-.37-5.36c-1.886.342-3.81.574-5.766.689a.578.578 0 0 1-.61-.58v0Z" />
+          </svg>
+          <div class="">
             <h1>Manage organizations, teams, and projects</h1>
             <p>
-              Use Abstract organizations, teams and projects to organize our
+              Use Abstrackt organizations, teams and projects to organize our
               people and your work.
             </p>
             <p>
-              <a href="#">Learn More -></a>
+              <a
+                class="font-semibold text-color-primary1 after:pl-1 after:content-['\2192']"
+                href="#"
+                >Learn More</a
+              >
             </p>
           </div>
         </div>
-        <div>
-          <img src="./assets/images/image4.jpeg" alt="Image 4" />
+        <div class="flex w-96 gap-2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-16 w-16 flex-shrink-0">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m3.75 9v7.5m2.25-6.466a9.016 9.016 0 0 0-3.461-.203c-.536.072-.974.478-1.021 1.017a4.559 4.559 0 0 0-.018.402c0 .464.336.844.775.994l2.95 1.012c.44.15.775.53.775.994 0 .136-.006.27-.018.402-.047.539-.485.945-1.021 1.017a9.077 9.077 0 0 1-3.461-.203M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
+          </svg>
           <div>
             <h1>Manage billing</h1>
             <p>Change subscription and payment details.</p>
             <p>
-              <a href="#">Learn More -></a>
+              <a
+                class="font-semibold text-color-primary1 after:pl-1 after:content-['\2192']"
+                href="#"
+                >Learn More</a
+              >
             </p>
           </div>
         </div>
-        <div>
-          <img src="./assets/images/image5.jpeg" alt="Image 5" />
+        <div class="flex w-96 gap-2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-16 w-16 flex-shrink-0">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.75 5.25a3 3 0 0 1 3 3m3 0a6 6 0 0 1-7.029 5.912c-.563-.097-1.159.026-1.563.43L10.5 17.25H8.25v2.25H6v2.25H2.25v-2.818c0-.597.237-1.17.659-1.591l6.499-6.499c.404-.404.527-1 .43-1.563A6 6 0 1 1 21.75 8.25Z" />
+          </svg>
+
           <div>
-            <h1>Authenticate to Abstract</h1>
+            <h1>Authenticate to Abstrackt</h1>
             <p>
               Set up and configure SSO, SCIM, and Just-in-Time provisioning.
             </p>
             <p>
-              <a href="#">Learn More -></a>
+              <a
+                class="font-semibold text-color-primary1 after:pl-1 after:content-['\2192']"
+                href="#"
+                >Learn More</a
+              >
             </p>
           </div>
         </div>
-        <div>
-          <img src="./assets/images/image6.jpeg" alt="Image 6" />
+        <div class="flex w-96 gap-2">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-16 w-16 flex-shrink-0">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M8.625 12a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H8.25m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0H12m4.125 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm0 0h-.375M21 12c0 4.556-4.03 8.25-9 8.25a9.764 9.764 0 0 1-2.555-.337A5.972 5.972 0 0 1 5.41 20.97a5.969 5.969 0 0 1-.474-.065 4.48 4.48 0 0 0 .978-2.025c.09-.457-.133-.901-.467-1.226C3.93 16.178 3 14.189 3 12c0-4.556 4.03-8.25 9-8.25s9 3.694 9 8.25Z" />
+          </svg>
           <div>
-            <h1>Abstract support</h1>
+            <h1>Abstrackt support</h1>
             <p>Get in touch with a human.</p>
             <p>
-              <a href="#">Learn More -></a>
+              <a
+                class="font-semibold text-color-primary1 after:pl-1 after:content-['\2192']"
+                href="#"
+                >Learn More</a
+              >
             </p>
           </div>
         </div>
       </section>
     </main>
+    <footer
+      class="flex flex-col flex-wrap gap-14 bg-color-bg2 px-16 py-8 text-color-bg1
+        md:flex-row">
+      <div class="w-fit min-w-72">
+        <h1 class="text-xl font-bold">Abstrackt</h1>
+        <ul class="mt-4 max-w-full font-medium">
+          <li class="w-full hover:underline">
+            <a class="" href="Start Trial">Start Trial</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">Pricing</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">Download</a>
+          </li>
+        </ul>
+      </div>
+      <div class="w-fit min-w-72">
+        <h1 class="text-xl font-bold">Resources</h1>
+        <ul class="mt-4 max-w-full font-medium">
+          <li class="w-full hover:underline">
+            <a class="" href="">Blog</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">Help Center</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">Release Notes</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">Status</a>
+          </li>
+        </ul>
+      </div>
+      <div class="w-fit min-w-72">
+        <h1 class="text-xl font-bold">Community</h1>
+        <ul class="mt-4 max-w-full font-medium">
+          <li class="w-full hover:underline">
+            <a class="" href="">Twitter</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">LinkedIn</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">Facebook</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">Dribble</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">Podcast</a>
+          </li>
+        </ul>
+      </div>
+      <div class="w-fit min-w-72">
+        <h1 class="text-xl font-bold">Company</h1>
+        <ul class="mt-4 max-w-full font-medium">
+          <li class="w-full hover:underline">
+            <a class="" href="">About Us</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">Careers</a>
+          </li>
+          <li class="w-full hover:underline">
+            <a class="" href="">Legal</a>
+          </li>
+          <li class="pt-8">
+            <h3>Contact Us</h3>
+            <a class="hover:underline" href="mailto:">info@abstrackt.com</a>
+          </li>
+        </ul>
+      </div>
+      <article class="ml-auto space-y-4">
+        <div class="relative inset-0 size-7 rounded-lg border bg-color-bg1 p-4">
+          <div
+            class="absolute right-[5px] top-[5px] size-4 rounded-full border-[4px] border-black"></div>
+          <div
+            class="absolute bottom-1 left-1 size-6 border-b-4 border-l-4 border-black"></div>
+        </div>
+        <div>
+          <p>&copy; Copyright 2024</p>
+          <p>Abstrackt Studio Design, Inc.</p>
+          <p>All rights reserved</p>
+        </div>
+        <button
+          type="button"
+          class="ml-auto flex gap-1 rounded-full bg-color-primary1 px-4 py-2 text-color-bg1">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6 w-full">
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
+          </svg>
+          Help
+        </button>
+      </article>
+    </footer>
   </body>
 </html>
